# devops

./: db.sqlite3  pyproject.toml
auto/: apps.py
auto/service/: v1.py
cmdb/: models.py  urls.py  util.py
cmdb/forms/: host.py  kubernetes.py  paas.py  projectgroup.py  region.py  tag.py
cmdb/migrations/: 0001_initial.py  0002_auto_20210113_1645.py  0003_auto_20210114_1547.py  0004_auto_20210114_1554.py  0005_auto_20210114_1604.py  0006_auto_20210115_1428.py
cmdb/views/: host.py  kubernetes.py  paas.py  projectgroup.py  region.py  tag.py
devops/: settings.py  urls.py
devops/utils/: ansible_api.py
static/js/: cancel.js  jquery.dashboard.js
system/: utils.py  views.py
task/: models.py  urls.py  util.py  views.py
task/migrations/: 0001_initial.py
templates/: 403.html  404.html  500.html  _paginator.html
templates/account/: change_password.html  change_password_done.html  change_password_for_admin.html  login.html
templates/auto/: change.html  changelist.html  delete.html
templates/base/: add.html  base.html  change.html  delete.html  layout.html
templates/cmdb/: host_list.html  host_username_list.html  kubernetes_list.html  pass_list.html  project_group_add_user.html  project_group_list.html  region_list.html  tag_list.html  type_list.html  view_host_password.html
tmp/: 13_202101191538.yml  18_202101191638.yml  21_202101191659.yml  29_202101201432.yml  2_202101191151.yml  7_202101191440.yml
users/: admin.py  models.py  urls.py  views_old.py
utils/: ansible_api.py  ansible_demo.py  auth_ansible_demo.py  email.py  test_demo.py
(+34 files in other folders)
